update to remove bower dependency and add browserify

--- a/index.html
+++ b/index.html
@@ -1,13 +1,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <script src="/app/bower_components/jquery/jquery.js"></script>
-    <script src="/app/bower_components/underscore/underscore.js"></script>
-    <script src="/app/bower_components/backbone/backbone.js"></script>
-    <script src="/app/js/main.js"></script>
-    <script src="/app/js/models/note.js"></script>
-    <script src="/app/js/collections/notes.js"></script>
-    <script src="/app/js/views/noteView.js"></script>
+    <script src="/app/bundle.js"></script>
   </head>
   <body style="position: absolute; top: 0; bottom: 0; left: 0; right: 0;">
   </body>
