update to partials, added css. broke out midi into respective modules, but that still requires testing. update gulp file to include new midi breakout. update to views/collections/models to respect new method of cors. update to index to include new necessary modules

--- a/index.html
+++ b/index.html
@@ -1,8 +1,16 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <script src="/app/bundle.js"></script>
-  </head>
-  <body style="position: absolute; top: 0; bottom: 0; left: 0; right: 0;">
-  </body>
+<head>
+	<link href="/app/css/style.css" media="all" rel="stylesheet" type="text/css">
+</head>
+
+<body>
+
+	<div id="main">
+	</div>
+
+	<script src="/build/bundle.js"></script>
+
+</body>
+
 </html>
